# unnest.nvim

./: .editorconfig  .gitignore  .nvim.lua  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-close.yml  lint-commit.yml  lint.yml  release.yml  test.yml  test_puc_lua.yml
doc/: tags  unnest.txt
lua/: nonest.lua  unnest.lua  unnest.lua.orig
lua/unnest/: init.lua  nvim.lua
plugin/: nonest.lua  unnest.lua
scripts/: helptags.lua  luals.lua  test.lua
spec/: clean_spec.lua  plugin_spec.lua
test/: test_clean.py  test_plugin.py  utils.py
