[project]
name = "unnest-nvim"
version = "0.1.0"
description = "Test suite for unnest.nvim"
requires-python = ">=3.9"
dependencies = [
    "pynvim",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["test"]

[tool.uv]
dev-dependencies = []
